<resources>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">3f73b9bdd9f499561e32e834e7dcd1f8</string>
    <string name="False">false</string>
    <string name="True">true</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_payment">Payment</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_trips">Your trips</string>
    <string name="action_wallet">Wallet</string>
    <string name="add">Add</string>
    <string name="add_amount">ADD AMOUNT</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="add_coupon_code">Add Coupon code</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="add_home_location">Add Home</string>
    <string name="add_money">Add Money</string>
    <string name="add_money_to_wallet">ADD MONEY TO THE WALLET</string>
    <string name="add_money_using">Add money using</string>
    <string name="add_new_payment">Add New Payment</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="add_promo">Add Promo Code</string>
    <string name="add_work_location">Add Work</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you</string>
    <string name="amount">Amount</string>
    <string name="amount_alert">Please enter the amount</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="app_name">Qruz Driver</string>
    <string name="app_setting">App Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">APPLY</string>
    <string name="approved">Approved</string>
    <string name="approximate">Estimated Fare</string>
    <string name="arabic">Arabic</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="arrived">Arrived</string>
    <string name="arriving">Provider accepted your request.</string>
    <string name="back">Back</string>
    <string name="banned">Banned</string>
    <string name="base_price">Base fare</string>
    <string name="battery">Your battery is low, please charge your mobile!</string>
    <string name="book_name">Booking ID</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_id_colon">Booking ID :</string>
    <string name="bookmark">E a r n</string>
    <string name="bookmark_description">Make your earnings depends on the trip. Withdraw yours every week/monthly.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cab">Cab</string>
    <string name="call">CALL</string>
    <string name="call_btn">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirm">Are you sure you want to cancel the ride?</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the Service?</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="canceled_rides">CANCELLED RIDES</string>
    <string name="car_number">Car Number:</string>
    <string name="card_details">Card Details</string>
    <string name="card_holder">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cencel_request">Are you sure you want to cancel the ride?</string>
    <string name="change">Change</string>
    <string name="change_date">Change</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">change password</string>
    <string name="change_password_title">Change Password</string>
    <string name="channel">86243592422</string>
    <string name="channel_name">Navigation Notifications</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWhtZWR0YWhlcjEzOSIsImEiOiJjazdkbm13cXUwYmQ0M2tueWZ1ZHF6c3BpIn0.NWCrx6W6kR_FGYCIayQxXg</string>
    <string name="choose_acc">Choose an account</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="choose_social">Choose an account</string>
    <string name="choose_type">Choose type</string>
    <string name="choose_you_staion">Choose Your specific station</string>
    <string name="city">City</string>
    <string name="close">Close</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="comments">Comments</string>
    <string name="commision">Service charge</string>
    <string name="commission">Service charge</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completed">Completed</string>
    <string name="confirm">Confirm Pickup</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="confirm_password_validation">Password Mismatch</string>
    <string name="confirm_trip">The trip is not started yet! \10 You will be notified once the trip started\10 Thank you for your interest in Qruz business</string>
    <string name="confirm_validation">Confirm password must be greater than 6</string>
    <string name="confirm_your_pickup">Confirm your Pickup</string>
    <string name="confirmation">Confirmation !</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="connect_with_social_media">Or connect with social</string>
    <string name="connection_error">connection error</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="couponHistory">Coupon history</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="current_password">Current Password</string>
    <string name="cvc">CVC</string>
    <string name="cvv">CVV</string>
    <string name="delete">Delete</string>
    <string name="demand_it">Demand it!</string>
    <string name="destination_location">Where to?</string>
    <string name="different_passwords">Password doesn\'t match.</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="discount_detection">Discount Applied</string>
    <string name="distance">Distance</string>
    <string name="distance_price">Distance fare</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="done">Done</string>
    <string name="driver_busy">Your trip was cancelled by the driver.Please contact us for support</string>
    <string name="drop_address">Drop Address</string>
    <string name="drop_at">Drop Location</string>
    <string name="dropoff_dialog_negative_text">Cancel</string>
    <string name="dropoff_dialog_positive_text">Start next</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile">Mobile Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="reason">Reason</string>
    <string name="reason_to_cancel">Reason to cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="vehicleType">Vehicle type</string>
</resources>