<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/louis_george_cafe_bold"
            android:text="@string/reason_to_cancel"
            android:textColor="@color/blue_color"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <EditText
            android:id="@+id/reason_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/reason"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/blue_color" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"

                android:layout_height="45dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/louis_george_cafe_bold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/blue_color"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"

                android:layout_height="45dp"
                android:background="@drawable/btn_gradient_background"
                android:fontFamily="@font/louis_george_cafe_bold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

