<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screens_background"
        android:fillViewport="true"
        android:tag="layout/fragment_update_image_0"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
                        app:civ_border_color="@color/colorPrimaryDark"
                        app:civ_border_width="2dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/editImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
                        android:scaleType="center"
                        app:backgroundTint="@color/colorPrimaryDark"
                        app:fabCustomSize="45dp"
                        app:srcCompat="@drawable/ic_pencil_white_24dp" />
                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/currentName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/name"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/blue_color"
                android:textColorHint="@color/edittext_hintColor" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/currentPhone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/phone_number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/blue_color"
                android:textColorHint="@color/edittext_hintColor" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/currentEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/blue_color"
                android:textColorHint="@color/edittext_hintColor" />

             <Button
                android:textStyle="bold"
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_gradient_background"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
