<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:tag="layout/activity_sign_up_0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/screens_background"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/signup_top_layout"
                android:scaleType="fitEnd"
                android:transitionName="background_transition" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/signin_layout"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edittext_background"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/blue_color"
                            android:textColorHint="@color/edittext_hintColor" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/userMobile"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edittext_background"
                            android:hint="@string/mobile"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/blue_color"
                            android:textColorHint="@color/edittext_hintColor" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/userCity"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edittext_background"
                            android:hint="@string/city"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/blue_color"
                            android:textColorHint="@color/edittext_hintColor" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/userVehicle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edittext_background"
                            android:hint="@string/vehicleType"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/blue_color"
                            android:textColorHint="@color/edittext_hintColor" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:paddingStart="50dp"
                            android:paddingEnd="50dp">

                             <Button
                android:textStyle="bold"
                                android:id="@+id/signUp"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:background="@drawable/btn_gradient_background"
                                android:drawableEnd="@drawable/ic_go"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp"
                                android:text="@string/sign_up"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />
                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/signin_layout"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_alignParentBottom="true"
                        android:layout_weight="2">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="horizontal">

                             <TextView
            android:textStyle="bold"
                                android:id="@+id/cancel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/cancel"
                                android:textColor="@color/colorPrimaryDark"  />
                        </LinearLayout>
                    </RelativeLayout>

                    <FrameLayout
                        android:id="@+id/SignUp_Container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>
